src/test/deca/codegen/invalid/overflow_div_int_float.deca
/*
    Description : Test sur la gestion de l'overflow sur la division (int/float)

    Résultat : à définir...

*/

{
    println(4000000000/0.01);
    println("Test échoué : voir p96 paragraphe 5 phrase 3 et 5");
}
